--- a/style/amal.css
+++ b/style/amal.css
@@ -10,6 +10,7 @@ body{
 }
 .camera_wrap img{
     max-width: 100%;
+    height: 30rem;
 }
 .header{
     background-color: #111e6c;
@@ -156,32 +157,7 @@ body{
 .quality{
     margin-top: 2rem;
 }
-.ac5{
-    position: relative;
-    margin-top: 3rem;
-}
-.ac5 img{
-    height: auto;
-   max-width:100%;
-}
-.ac5 div{
-    margin-bottom: 5em;
-    margin-top: 2rem;
-}
-.ac5 div h5{
-    font-size: 20px;
-    font-weight: bold;
-}
-.management{
-    margin-bottom: -80em;
-}
-.management div img{
- margin-bottom: -50px;
- margin-top: 5em;
-}
-#m4{
-    margin-bottom: -40px;
-}
+
 hr{
     width: 10rem;
     padding: 0;
@@ -226,12 +202,7 @@ footer ul li a:hover{
     text-decoration: none;
 }
 @media only screen and (min-width:530px){
-    .management img{
-        padding-left: 5em;
-        padding-right: 5em;
-        margin-top: 20rem;
-    }
-    .ac5, .ac4, .ac3, .ac2{
+    .ac4, .ac3, .ac2{
         margin-top: 7rem;
     }
     .ac1{
@@ -240,6 +211,9 @@ footer ul li a:hover{
     .quality p{
         padding-left:3em ;
         padding-right: 3em;
+    }
+    .ac4{
+        margin-bottom: 6rem;
     }
 }
 @media only screen and (min-width:768px){
@@ -290,11 +264,6 @@ footer ul li a:hover{
         grid-gap: 10px;
         
     }
-    .management{
-        display: grid;
-        grid-template-columns: repeat(4,1fr);
-        grid-gap: 20px;
-    }
     .accordon .ac1,
     .accordon .ac2
     {
@@ -305,15 +274,6 @@ footer ul li a:hover{
     .ac3 .btn{
         padding-left: 5em;
         padding-right: 5em;
-    }
-    .management{
-        padding-left: 5em;
-        padding-right: 5em;
-        margin-bottom: -80em;
-    }
-    .management img{
-        padding-left: 0px;
-        padding-right: 0px;
     }
 
 }
@@ -331,4 +291,180 @@ footer ul li a:hover{
         margin-left: 3rem;
     }
 }
+
+
+
+
+
+/******* color chart css ******/
+#chart{
+   padding: 0 5%;
+   margin-bottom: 3rem;
+   text-align: center;
+}
+#chart h3{
+    font-size: 30px;
+    color: #111e6c;
+    font-weight: bold;
+    margin: 5rem 0 0 0;
+}
+.paint{
+    height: 12rem;
+    border-radius: 20px;
+    margin: 4rem 0 15px 0;
+}
+.saint p{
+    text-align: left;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding-left: 10px;
+    font-weight: bold;
+}
+.saint h5{
+    color: #56c596;
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 4rem;
+}
+.satin1{
+    background-color: #F3F6EB;
+}
+.satin2{
+    background-color:#F9FDDA;
+}
+.satin3{
+    background-color: #FAF5D8;
+}
+.satin4{
+    background-color: #CC3F58;
+}
+.satin5{
+    background-color: #88253C;
+}
+.satin6{
+    background-color: #E5FBE6;
+}
+.satin7{
+    background-color: #3EA987;
+}
+.satin7{
+    background-color: #23997E;
+}
+.satin8{
+    background-color: #287BA7;
+}
+.satin9{
+    background-color: #329CBD;
+}
+.satin10{
+    background-color: #332735;
+}
+.satin11{
+    background-color: #A9DD97;
+}
+.satin12{
+    background-color: #C9957D;
+}
+.gloss1{
+    background-color: #EBD196;
+}
+.gloss2{
+    background-color: #F8F6E0;
+}
+.gloss3{
+    background-color: #FCF7D7;
+}
+.gloss4{
+    background-color: #ECE6D6;
+}
+.gloss5{
+    background-color: #9E5958;
+}
+.gloss6{
+    background-color: #E19B9C;
+}
+.gloss7{
+    background-color: #4A775A;
+}
+.gloss8{
+    background-color: #425C51;
+}
+.gloss9{
+    background-color: #2590B8;
+}
+.gloss10{
+    background-color: #ACADAE;
+}
+.gloss11{
+    background-color: #CC384A;
+}
+.gloss12{
+    background-color: #D77052;
+}
+.texture1{
+   background-image: url(../img/concord\ grey.png);
+}
+.texture2{
+    background-image: url(../img/brickred.png);
+}
+ .texture3{
+    background-image: url(../img/gosammer.png);
+    
+}
+.texture4{
+    background-image: url(../img/brilliantwhite.png);
+}
+.texture5{
+    background-image: url(../img/offwhite.png);
+}
+.texture6{
+    background-image: url(../img/Bamboo.png);
+}
+.texture7{
+    background-image: url(../img/cream.png);
+}
+.texture8{
+    background-image: url(../img/coconutbrown.png);
+}
+.texture9{
+    background-image: url(../img/mangola.png);
+}
+.texture10{
+    background-image: url(../img/sand.png);
+
+}
+.texture11{
+    background-image: url(../img/butter\ cream.png);
+}
+.texture12{
+    background-image: url(../img/sienna.png);
+}
+
+
+@media only screen and (min-width:768px){
+    .saint{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 10px;
+        column-gap: 10px;
+    }
+    .saint h5{
+        grid-column: span 2;
+    }
+}
+@media only screen and (min-width:1000px){
+    .saint{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 10px;
+        column-gap: 10px;
+    }
+    .saint h5{
+        grid-column: span 3;
+    }
+}
+
+
+
+
 
