--- a/style/contact.css
+++ b/style/contact.css
@@ -8,16 +8,19 @@
     margin:0; 
 }
 #sub{
-    padding-top: 5rem;
+    padding-top: 3rem;
 }
 #sub p{
-    text-align: left;
+    text-align: center;
     display: inline-block;
-    padding-left: 5px;
+    padding: 10px;
+    padding-top: 0px;
+    margin: 0px;
 }
 #sub i{
-    font-size:1.5rem ;
+    font-size:2.3rem ;
     color: #56c596;
+    display: block;
 }
 #sub div{
     margin: 0px auto;
@@ -33,13 +36,16 @@
     font-size: 1.5rem;
     font-weight: bold;
     color: white;
+    margin-bottom: 18px;
 }
 .side1{
     background-image: url('../img/contact b.jpg'); 
     background-size: cover;
     background-repeat: no-repeat;
-    height: 15rem;
+    height: 24rem;
     background-attachment: fixed;
+    background-position-x: -10rem;
+    background-position-y: -16rem;
 }
 label{
     display: block;
@@ -95,6 +101,8 @@ textarea{
     }
     .side1{
         background-attachment: fixed;
+        height: 25rem;
+        background-position-y: -10rem;
     }
 }
 @media only screen and (min-width:768px){
@@ -145,8 +153,23 @@ textarea{
     body{
         background-color: #56c596;
     }
-    #sub1 p{
-        display: inline-flex;
+    #sub .sub1{
+       display: grid;
+       grid-template-columns: 10% 90%;
+    }
+    #sub .sub2{
+        display: grid;
+        grid-template-columns: 10% 90%;
+    }
+    #sub .sub3{
+        display: grid;
+        grid-template-columns: 10% 90%;
+    }
+    #sub p{
+        text-align: left;
+        padding: 0;
+        margin: auto 0;
+        padding-left: 5px;
     }
     #sub div{
         text-align: left;
@@ -176,10 +199,10 @@ textarea{
     }
     #sub div{
         text-align: left;
-        margin-left: 3rem;
+        margin-left: 2rem;
         padding-top: 2rem;
     }
     #sub h2{
-        margin-left:3rem ;
+        margin-left:2rem ;
     }
 }
